corrected icon spacing

--- a/main.css
+++ b/main.css
@@ -207,10 +207,10 @@ h3:nth-of-type(3){
     position: absolute;
     z-index: -100;
     background-color: #7D83FD;
-    height: 95%;
-    width: 40%;
-    left: 5%;
-    bottom: 10%;
+    height: 105%;
+    width: 45%;
+    left: 4%;
+    bottom: -1%;
     
 }
 
@@ -241,14 +241,15 @@ h3:nth-of-type(3){
     position: absolute;
     z-index: -100;
     background-color: #7D83FD;
-    height: 95%;
-    width: 25%;
+    height: 110%;
+    width: 27%;
     left: 70%;
-    bottom: -4%;
+    bottom: -6%;
     
 }
 
 .tools-card {
+    padding: 5%;
     width: 45%;  
     margin: .5rem auto;
     text-align: center;
@@ -266,13 +267,12 @@ h3:nth-of-type(3){
     margin-bottom: 35%;
 }
 
-.skill-tools-container .ficon  {
-    font-size: 2rem;
+.ficon {
+    font-size: 10rem;
     font-weight: bolder;
+    margin-top: 5%;
     margin-bottom: 60%;
 }
-
-
 
 .projects {
     margin-top: 10%;
